--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
    <h1>Ian Bush</h1>
 </header>
 <body>
-  <div class = "tab" id = "education">
-  <h2>Education</h2>
+ 
+  <button class = "tab"><h2>Education</h2></button>
+    <div class = "panel">
     <h3>Saint John's University: Collegeville, MN</h3>
     <h4>September 2016-May 2020</h4>
     <ul>
       <li>Bachelor of Arts in Computer Science</li>
       <li>Studied abroad in Japan for one semester</li>
     </ul>
+    </div>
   </div>
-  <div class = "tab" id = "skills">
-  <h2>Professional Skills</h2>
+  
+  <button class = "tab"><h2>Professional Skills</h2></button>
+    <div class = "panel">
   <ul>
     <li>Proficient in Java Development (4 Years Experience)</li>
     <li>Experience with Python, HTML, Microsoft Office, Visual Basic, JavaScript, and Flutter development</li>
@@ -28,10 +31,11 @@
     <li>Works well under pressure</li>
     <li>Strong verbal and written communication skills</li>
   </ul>
+    </div>
   </div>
 
-  <div class = "tab" id = "xp">
-  <h2>Experience</h2>
+<button class = "tab"><h2>Experience</h2></button>
+    <div class = "panel">
   <h3>Assistant Flutter App Developer (Contract)</h3>
     <h4>December 2020-January 2021</h4>
   <ul>
@@ -54,6 +58,7 @@
     <li>Recording for folklore preservation and research</li>
     <li>Organized data and research findings</li>
   </ul>
+    </div>
     </div>
   <script src = "script.js"></script>
 </body>
