--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </script>
 <head>
   <link rel = "stylesheet" href = "styles.css"/>
+  <title>Ian Bush</title>
 </head>
 <header>
    <h1>Ian Bush</h1>
