--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src = "script.js">
-</script>
 <head>
   <link rel = "stylesheet" href = "styles.css"/>
   <title>Ian Bush</title>
@@ -10,7 +8,7 @@
    <h1>Ian Bush</h1>
 </header>
 <body>
- 
+ <script src = "script.js"> </script>
   <button class = "tab"><h2>Education</h2></button>
     <div class = "panel">
     <h3>Saint John's University: Collegeville, MN</h3>
