--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <h1>Ian Bush</h1>
 </header>
 <body>
+ 
   <button class = "tab"><h2>Education</h2></button>
     <div class = "panel">
     <h3>Saint John's University: Collegeville, MN</h3>
@@ -59,6 +60,7 @@
   </ul>
     </div>
     </div>
+  <script src = "script.js"></script>
 </body>
   <footer>
     <h6> 15430 Skyview Circle W, Minnetonka, MN, 55345<br>
