--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src = "script.js"> </script>
   <head>
   <link rel = "stylesheet" href = "styles.css"/>
-  <title>Ian Bush</title>
+  <title>Resume: Ian Bush</title>
 </head>
 <header>
    <h1>Ian Bush</h1>
